--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: grey;
-}
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
 
 *{
     margin: 0;
@@ -36,5 +37,33 @@ header{
 /*fine header*/
 
 /*main*/
+main{
+    margin: 70px 200px;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: white;
+}
 
+section{
+    margin: 30px;    
+}
+
+h4{
+    margin: 30px;
+}
+
+.blu{
+    background-color: blue;
+    color: white;
+    
+}
+
+.white{
+    background-color: white;
+    color: grey;
+}
+
+.linea{
+    color: grey; 
+}
 /*fine main*/
