update botton iniziali

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,12 @@ section{
 
 h4{
     margin: 30px;
+    vertical-align: middle;
+}
+
+#first-button{
+    
+    border-radius: 7px;
 }
 
 .blu{
@@ -70,6 +76,7 @@ button{
     width: 100px;
     height: 30px;
     border-radius: 100px;
+    display: inline-block;
 }
 
 .viola{
